keycloak/olm/ing-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # 將 HTTP 重定向到 HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.fck8slab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
